# multi-agent

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MEMORY.md  Makefile  README.md  SKILL.md  pyproject.toml
.codex-multi-agent-relay/: RELAY_DONE.txt  changed-files.txt  ownership.json  run-plan.json
.codex-multi-agent-relay/audits/: audit-20260526T055323Z.json  audit-20260526T071938Z.json
.codex-multi-agent-relay/results/: R001-worker-echo.json  R001-worker-echo.md  R002-reviewer-echo.json  R002-reviewer-echo.md
.codex-multi-agent-relay/summary/: run-summary.md
.codex-multi-agent-relay/tasks/: R001-worker-echo.md  R002-reviewer-echo.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-fast.yml  ci-full.yml  codex-review.yml  release-pypi.yml  release.yml  validate.yml
adapters/_shared/: bridge.py  desktop_prompt.py  self_check.py  worker_outcome.py
adapters/claude-code/: QUICKSTART.md  README.md  SKILL.md  TEAMS.md
adapters/claude-code/agents/: multi-agent-reviewer.md  multi-agent-verifier.md  multi-agent-worker.md
adapters/claude-code/examples/: favorite-feature.yaml
adapters/claude-code/scripts/: claude_code_self_check.py  dogfood_claude.py  launch_claude_worker.py  launch_claude_worker.sh  prepare_claude_desktop.py
adapters/codex/: NATIVE_SUBAGENT_CONTRACT.md  QUICKSTART.md  README.md  SKILL.md
adapters/codex/agents/: multi-agent-reviewer.toml  multi-agent-worker.toml
adapters/codex/examples/: favorite-feature.yaml
adapters/codex/scripts/: codex_self_check.py  doctor_codex.py  dogfood_codex_app.py  finalize_native_run.py  launch_codex_worker.py  launch_codex_worker.sh  prepare_desktop_worker.py  prepare_desktop_worker.sh  prepare_native_plan.py  prepare_native_subagent.py  prepare_native_subagent.sh
adapters/cursor/: QUICKSTART.md  README.md  SDK.md  SKILL.md
adapters/cursor/examples/: favorite-feature.yaml
adapters/cursor/scripts/: cursor_self_check.py  launch_cursor_worker.py  launch_cursor_worker.sh  prepare_cursor_desktop.py  prepare_cursor_sdk.py
adapters/cursor/sdk/: package.json  run_workers.mjs
adapters/hermes/: QUICKSTART.md  README.md  SKILL.md
adapters/hermes/scripts/: hermes_self_check.py
adapters/openclaw/: QUICKSTART.md  README.md  SKILL.md
adapters/openclaw/examples/: dogfood-openclaw.yaml  favorite-feature.yaml  fizzbuzz-module-paths.json  fizzbuzz-module-paths.yaml
adapters/openclaw/scripts/: _locking.py  _preflight.py  _runtimes.py  audit_worker_output.py  capture_changed_files.py  create_task_cards.py  memory_log.py  memory_rotate.py  openclaw_worker_outcome.py  run_graph.py  run_local_demo.py  run_loop.py  (+3 more)
agents/: openai.yaml
bench/: README.md  run_bench.py
bench/swebench-lite/: README.md  run_swebench_lite.py
checklists/: diff-audit.md  environment-check.md  permission-matrix.md  safety.md  should-use-multi-agent.md
docs/: agent-install.md  architecture.md  clients.md  content-governance.md  development.md  governance.md  mcp-format.md  product.md  roadmap.md  safety-rules.md
examples/: README.md  bugfix.md  feature.md  review.md
examples/case-study-fizzbuzz/: README.md
examples/case-study-flask-cli/: MEMORY.md  README.md  task.yaml
examples/case-study-gh-issue-typo/: README.md  after.py  before.py  mock-issue.md  mock-pr.md
examples/case-study-loop/: README.md
examples/end-to-end-agent-install/: README.md
ide/: self_check.py
ide/extensions/: PUBLISHING.md  README.md
ide/multi-agent-panel/: README.md  server.py
mcp/: self_check.py
mcp/multi-agent-coordinator/: README.md  coordinator.py  server.py
multi_agent_coding/: __init__.py  cli.py
multi_agent_coding.egg-info/: PKG-INFO  SOURCES.txt
scripts/: build_skill_packages.py  ci_smoke.sh  configure_mcp.py  doctor.py  full_validate.sh  install_native_skills.py  run_multi_agent.py  validate_all_adapters.py  verify_release_packages.py
templates/: final-delivery.md  result-report.md  task-card.md
tests/: test_core_scripts.py
tools/: _tool_base.py  git_tool.py  lint_tool.py  repo_index_tool.py  shell_tool.py  test_runner_tool.py  worktree_tool.py
(+116 files in other folders)
